# llm-psychometric-diagnosis

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: diagnosis.md  generate-items.md
.github/workflows/: ci.yml
Projects/Anxiety_GAD_Forbes2018/: items.csv
Projects/PTSD_Forbes2018/: README.md  items.csv  prepare_responses.R
diagnosis/: __main__.py  cli.py  skill_loader.py  skills.py  tmux.py
diagnosis/skills/: diagnosis.md  psychometric-diagnosis.md
