[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-psych-dx"
version = "0.1.0"
description = "AutoPsychDx: automatic psychometric diagnosis using cut-off, IRT, and DCM via an LLM agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15",
    "rich>=13",
]

[project.scripts]
diagnosis = "diagnosis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["diagnosis"]

[tool.hatch.build.targets.wheel.shared-data]
"diagnosis/skills" = "diagnosis/skills"
